syntax = "proto3";
package types;

message CreateTx {
	string to = 1;
	int64 amount = 2;
	int64 fee = 3;
	string note = 4;
}

message UnsignTx {
	bytes data = 1;
}

message SignedTx {
	bytes unsign = 1;
	bytes sign = 2;
	bytes pubkey = 3;
	int32 ty = 4;
}

message Transaction {
	bytes execer = 1;
	bytes payload = 2;
	Signature signature = 3;
	int64 fee = 4;
	int64 expire = 5;
	int64 nonce = 6; //随机ID，可以防止payload 相同的时候，交易重复
	string to = 7; //对方地址，如果没有对方地址，可以为空
}

//三种签名支持
//ty = 1 -> secp256k1
//ty = 2 -> ed25519
//ty = 3 -> sm2
message Signature {
	int32 ty = 1;
	bytes pubkey = 2;
	bytes signature = 3;
}
